--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FriendFinder",
+  "name": "Friend-Finder",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chosen": "0.0.2",
     "express": "^4.16.4"
   }
 }
